--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h1>10 korte fortellinger med lyd</h1>
     <p>Klikk på play for å lytte til fortellingen.</p>
     <div class="story">
-    <h2>1. En tur på byen</h2>
-        <audio controls src="https://docs.google.com/uc?export=download&id=1wa98VT7svgumAaar8dFGyjcNXYmOKBNb"></audio>
+        <h2>1. En tur på byen</h2>
+        <audio controls src="historie1.m4a#t=10,20"></audio>
     </div>
     <div class="story">
         <h2>2. Arbeid i hagen</h2>
