--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -8,52 +7,113 @@
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
         h1 { color: #004080; }
         h2 { color: #006699; }
-        audio { margin-bottom: 20px; width: 100%; }
+        audio { margin-bottom: 10px; width: 100%; }
         .story { margin-bottom: 40px; }
+        ul { margin-top: 5px; }
     </style>
 </head>
 <body>
     <h1>10 korte fortellinger med lyd</h1>
-    <p>Klikk på play for å lytte til fortellingen.</p>
+    <p>Klikk på play for å lytte til fortellingen. Svar deretter på spørsmålene.</p>
+
     <div class="story">
         <h2>1. En tur på byen</h2>
-        <audio controls src="historie1.m4a#t=10,20"></audio>
+        <audio controls src="historie1.m4a"></audio>
+        <ul>
+            <li>Hva kjøpte Maria?</li>
+            <li>Hvem møtte hun på kafé?</li>
+            <li>Hvordan var dagen hennes?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>2. Arbeid i hagen</h2>
-        <audio controls src="historie2.m4a#t=10,20"></audio>
+        <audio controls src="historie2.m4a"></audio>
+        <ul>
+            <li>Hva gjorde Ali i hagen?</li>
+            <li>Hva drakk han etterpå?</li>
+            <li>Hvordan følte han seg?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>3. Kose seg med venner</h2>
-        <audio controls src="historie3.m4a#t=20,30"></audio>
+        <audio controls src="historie3.m4a"></audio>
+        <ul>
+            <li>Hva lagde Anna og vennene?</li>
+            <li>Hva gjorde de etter maten?</li>
+            <li>Hadde de det hyggelig?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>4. Treffe en ny venn</h2>
-        <audio controls src="10_korte_historier.m4a#t=30,40"></audio>
+        <audio controls src="historie4.m4a"></audio>
+        <ul>
+            <li>Hvor møtte Pablo den nye vennen?</li>
+            <li>Hva gjorde de sammen?</li>
+            <li>Skal de møtes igjen?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>5. En regnværsdag</h2>
-        <audio controls src="10_korte_historier.m4a#t=40,50"></audio>
+        <audio controls src="historie5.m4a"></audio>
+        <ul>
+            <li>Hvordan var været?</li>
+            <li>Hva gjorde Natalia?</li>
+            <li>Hvordan ble dagen?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>6. En tur til fjellet</h2>
-        <audio controls src="10_korte_historier.m4a#t=50,60"></audio>
+        <audio controls src="historie6.m4a"></audio>
+        <ul>
+            <li>Hvem var Ola på tur med?</li>
+            <li>Hva hadde de med?</li>
+            <li>Hva så de?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>7. Handle i butikken</h2>
-        <audio controls src="10_korte_historier.m4a#t=60,70"></audio>
+        <audio controls src="historie7.m4a"></audio>
+        <ul>
+            <li>Hva kjøpte Sara?</li>
+            <li>Møtte hun noen i butikken?</li>
+            <li>Hadde hun en handleliste?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>8. Få en overraskelse</h2>
-        <audio controls src="10_korte_historier.m4a#t=70,80"></audio>
+        <audio controls src="historie8.m4a"></audio>
+        <ul>
+            <li>Hva ventet på Adam da han kom hjem?</li>
+            <li>Hva feiret de?</li>
+            <li>Hvordan følte Adam seg?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>9. En dag på jobb</h2>
-        <audio controls src="10_korte_historier.m4a#t=80,90"></audio>
+        <audio controls src="historie9.m4a"></audio>
+        <ul>
+            <li>Hva startet Elena med?</li>
+            <li>Hva gjorde hun etterpå?</li>
+            <li>Hvem tok hun kaffe med?</li>
+        </ul>
     </div>
+
     <div class="story">
         <h2>10. Besøk hos legen</h2>
-        <audio controls src="10_korte_historier.m4a#t=90"></audio>
+        <audio controls src="historie10.m4a"></audio>
+        <ul>
+            <li>Hvorfor dro Mustafa til legen?</li>
+            <li>Hva fikk han?</li>
+            <li>Ble han bedre?</li>
+        </ul>
     </div>
 </body>
 </html>
