--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         }
 
         audio {
-            margin: 10px 0;
+            margin: 12px 0;
             width: 100%;
             max-width: 100%;
             display: block;
+            height: 60px;
+            background-color: #f0f0f0;
+            border-radius: 8px;
         }
 
         .story {
@@ -59,7 +62,7 @@
             }
 
             audio {
-                height: 40px;
+                height: 70px;
             }
         }
     </style>
@@ -90,7 +93,7 @@
     
     <div class="story">
         <h2>3. Fortelling 3</h2>
-        <audio controls src="historie3.m4a"></audio>
+        <audio controls src="historie3.mp3"></audio>
         <ul>
             <li>Hva lagde Anna og vennene?</li>
             <li>Hva gjorde de etter maten?</li>
@@ -100,7 +103,7 @@
     
     <div class="story">
         <h2>4. Fortelling 4</h2>
-        <audio controls src="historie4.m4a"></audio>
+        <audio controls src="historie4.mp3"></audio>
         <ul>
             <li>Hvor møtte Pablo den nye vennen?</li>
             <li>Hva gjorde de sammen?</li>
