--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     
     <div class="story">
         <h2>2. Fortelling 2</h2>
-        <audio controls src="historie2.m4a"></audio>
+        <audio controls src="historie2.mp3"></audio>
         <ul>
             <li>Hva gjorde Ali i hagen?</li>
             <li>Hva drakk han etterpå?</li>
