--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="story">
         <h2>1. Fortelling 1</h2>
-        <audio controls src="historie1.m4a"></audio>
+        <audio controls src="historie1.mp3"></audio>
         <ul>
             <li>Hva kjøpte Maria?</li>
             <li>Hvem møtte hun på kafé?</li>
