--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             width: 100%;
             max-width: 100%;
             display: block;
-            height: 60px;
+            height: 80px;
+            padding: 8px 0;
             background-color: #f0f0f0;
             border-radius: 8px;
         }
@@ -62,7 +63,8 @@
             }
 
             audio {
-                height: 70px;
+                height: 90px;
+                padding: 10px 0;
             }
         }
     </style>
